--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>SunnyDay</title>
     <!--META TAGS-->
     <meta charset="utf-8" />
-    <meta name="author" content="DrCode - Dicas para desenvolvedores Web" />
+    <meta name="author" content="SunnyDay - A luz para a sua nova ideia" />
 
-    <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="css/custom.css" />
+    <!-- CSS-->
+
 
     <!--HTML5-->
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <!-- <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> -->
 
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -19,13 +19,19 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="shortcut icon" href="img/logo.png" sizes="32x32" type="image/png">
-
     <link
         href="https://fonts.googleapis.com/css?family=Dancing+Script|Source+Sans+Pro|Passion+One|Shadows+Into+Light+Two&display=swap"
         rel="stylesheet">
-    <script src="https://use.fontawesome.com/d5be6b24d8.js"></script>
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+
+    <link rel="stylesheet" href="css/custom.css">
+
+    <link rel="shortcut icon" href="img/logo.png" sizes="32x32" type="image/png">
+
+
+
 
 </head>
 
@@ -536,10 +542,8 @@
                         title="gisareuwsaat@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                     <a target="_blank" href="http://api.whatsapp.com/send?1=pt_BR&phone=5511977713098"
                         title="55 11 97771 3098"><i class="fa fa-phone-square" aria-hidden="true"></i></a>
-                    <a href="http://linkedin.com/in/gisa-reuwsaat" target="_blank"
-                        onclick=location.href="https://www.linkedin.com/in/andreascampaci/"
-                        title="https://www.linkedin.com/in/gisa-reuwsaat"><i class="fa fa-linkedin-square"
-                            aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/giselireuwsaat/" target="_blank"><i
+                            class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                     <a target="_blank" href="https://github.com/giselireuwsaat"
                         title="https://github.com/giselireuwsaat"><i class="fa fa-github-square"
                             aria-hidden="true"></i></a>
@@ -566,17 +570,21 @@
                 <p>Copyright © 2019 SunnyDay All Right Reserved</p>
             </div>
         </div>
+    </footer>
 
+    <!--#############################################################-->
+    <!--JS-->
+    <script src="https://use.fontawesome.com/d5be6b24d8.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="js/jcarousellite.js"></script> -->
 
-        <!--#############################################################-->
-        <!--JS-->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <!-- <script type="text/javascript" src="js/jcarousellite.js"></script> -->
-        <script type="text/javascript" src="js/main.js"></script>
-        <script src="js/bootstrap.js" type="text/javascript"></script>
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-        <!--#############################################################-->
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script> -->
+    <script type="text/javascript" src="js/main.js"></script>
+    <!--#############################################################-->
 </body>
 
 </html>
