--- a/index.html
+++ b/index.html
@@ -341,7 +341,6 @@
 
     <section id="o-que-fazemos" class="secPad">
 
-
         <div id="content">
             <hgroup>
                 <h2>O que fazemos </h2>
@@ -575,7 +574,7 @@
     <!--#############################################################-->
     <!--JS-->
     <script src="https://use.fontawesome.com/d5be6b24d8.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="js/jcarousellite.js"></script> -->
 
     <script src="js/bootstrap.js" type="text/javascript"></script>
